[package]
name = "memea"
authors = ["Zephan Enciso <zmenciso@pm.me>"]
version = "0.1.2"
edition = "2021"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.21", features = ["derive"] }
csv = "1.3.1"
derive_more = { version = "1.0.0", features = ["add", "mul"] }
dialoguer = { version = "0.11.0", features = ["completion"] }
gds21 = "0.2.0"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.143"
serde_yaml = "0.9.34"
shellexpand = { version = "3.1.1", features = ["path"] }
terminal_size = "0.4.3"
thiserror = "2.0.12"
